# free-proxy

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
scripts/: download-mihomo.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cmd/: config.rs  mod.rs  proxy.rs  rules.rs  subscription.rs  system_proxy.rs
src-tauri/src/core/: config_generator.rs  mihomo_manager.rs  mod.rs  subscription.rs  system_proxy.rs
src-tauri/src/model/: app_config.rs  mod.rs  proxy.rs  rule.rs  subscription.rs
src-tauri/src/tray/: tray.rs
src-tauri/src/utils/: mod.rs  network.rs  paths.rs
src/components/: ModeSelector.tsx  NodeCard.tsx  NodeList.tsx  ProxyToggle.tsx  RuleEditor.tsx  StatusBar.tsx  SubscriptionItem.tsx  SubscriptionManager.tsx
src/services/: constants.ts  mihomoApi.ts  tauriCommands.ts
src/store/: proxyStore.ts  subscriptionStore.ts  trafficStore.ts
src/types/: config.ts  proxy.ts  subscription.ts
